Increase scripting functionality and add improved security controls
Vastly improve the language features in both expression and script mode:
- add lambdas
- add function references
- support single line if statements
- add list and map literals
- add bitwise and, or, xor and not
- add bitshifts
- add join() function
- support java style foreach syntax
- add continue statement

Fixes:
- some quirks with scripted functions and ELFrames

New security features:
- Allow disabling using setAccessible() on reflected methods
- Allow restricting which java classes can be loaded by reflection
- Allow classes to not be reflected upon
- Support loop iteration limits
- Support operation limits
- Support restricted access contexts with Java Security Manager

Add a script engine style interface