@@ -4,7 +4,7 @@
 
   <groupId>com.intrbiz.express</groupId>
   <artifactId>express</artifactId>
-  <version>4.1.0-SNAPSHOT</version>
+  <version>5.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Intrbiz Express</name>
@@ -78,6 +78,14 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+        		<version>3.0.0-M5</version>
+        		<configuration>
+                    <argLine>-Djava.security.manager -Djava.security.policy=${basedir}/all.policy</argLine>
+                </configuration>
+      		</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
